# event-manager-frontend

./: Cargo.toml  Dockerfile  Rocket.toml
.github/: labeler.yml
.github/workflows/: publish.yml  rust.yml
.kubernetes/: manifest.yaml
public/: index.css
resources/: events.graphql  location.graphql  pagination.graphql  schema.graphql  tags.graphql
resources/mutations/: location.graphql
src/: helper.rs  lib.rs  main.rs  pagination.rs
templates/: event.hbs  event_day.hbs  event_inline.hbs  event_list.hbs  header.hbs  index.hbs  layout.hbs  location.hbs  location_inline.hbs  location_list_item.hbs  locations.hbs  organizer_list_item.hbs  tag.hbs  tag_inline.hbs
templates/edit/: location.hbs
